# pynesweeper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/pynesweeper/: __init__.py  __main__.py
src/pynesweeper/cli/: __init__.py
tests/: test_board.py
